# Six

./: Cargo.toml  README.md
six/: Cargo.toml
six-term/: Cargo.toml
six-term/src/: buffer_view.rs  main.rs
six/assets/: lorem.txt
six/src/: .state.rs.rustfmt  buffer.rs  cursor.rs  event.rs  lib.rs  mode.rs  state.rs
six/src/cursor/: bounded.rs  cells.rs  char.rs  codepoint.rs  head.rs  line.rs  mod.rs  paragraph.rs  paragraphs.rs  tail.rs
six/src/mode/: insert.rs  mod.rs  normal.rs  operator.rs  query.rs  select.rs
src/: buffer.rs  cursor.rs  event.rs  keymap.rs  lib.rs  main.rs  state.rs
src/ui/: buffer_view.rs
