[package]
name = "six"
version = "0.1.0"
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[dependencies]
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
derivative = "2.1.1"
im = "15.0.0"
# wasmer-runtime = "0.13.1"
