[package]
name = "six"
version = "0.1.0"
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[dependencies]
rlua = "0.17.0"

# TODO: Move this onto a `six_term` package.
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
